--- a/style/base.css
+++ b/style/base.css
@@ -125,7 +125,7 @@ body{
 .init h1 {
   text-align: center;
   position: absolute;
-  top: 30%;
+  top: 20%;
   left: 0;
   width: 100%;
   padding: .3em;
@@ -235,6 +235,7 @@ section:last-child{
   justify-content: center;
   align-self: center;
   margin: 2px 0px 2px 0px;
+  text-align: center;
 }
  .card {
   min-width: 33em;
