--- a/style/base.css
+++ b/style/base.css
@@ -92,23 +92,15 @@ body{
   content: '';
   position: absolute;
   display: block;
-  top: -100%;
+  top: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
   background-color: var(--clr1);
   transition: .45s ease-in-out;
+  border-radius: var(--border-radius);
 }
 
-.bg-hidden {
-  top: -100%;
-  opacity: 0;
-}
-
-.bg-visible {
-  top: 0;
-  opacity: 1;
-}
 
 .init {
   position: relative;
@@ -126,7 +118,7 @@ body{
 .init h1 {
   text-align: center;
   position: absolute;
-  top: 20%;
+  top: 13%;
   left: 0;
   width: 100%;
   padding: .3em;
@@ -154,6 +146,7 @@ body{
 .wrap{
   max-width: 100%;
   min-width: 100%;
+  height: auto;
   margin: 0;
   position: relative;
   border-radius: var(--border-radius);
@@ -165,6 +158,7 @@ body{
 
 .wrapper{
   width: 100%;
+  height: auto;
   box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.8);
   border-radius: var(--border-radius);
   z-index: 0;
