--- a/style/base.css
+++ b/style/base.css
@@ -445,3 +445,80 @@ footer ul li{
   flex-direction: column;
   align-self: center;
 }
+
+.form{
+  text-align: center;
+  margin: 0 0 0 35%;
+  width: 450px;
+  font-size: 16px;
+  background: var(--clr1);
+  padding: 30px 30px 15px 30px;
+  border: 5px solid var(--clr4);
+}
+
+@media screen and (max-width: 1200px) {
+.form{
+  text-align: center;
+  margin: 0 0 0 0;
+  width: 450px;
+  font-size: 16px;
+  background: var(--clr1);
+  padding: 30px 30px 15px 30px;
+  border: 5px solid var(--clr4);
+}
+}
+.form input[type=submit],
+.form input[type=button],
+.form input[type=text],
+.form input[type=password],
+.form input[type=email],
+.form input[type=date],
+.form label
+{
+  font-size: 16px;
+  color: var(--clr4);
+
+}
+.form label {
+  display:block;
+  margin-bottom: 10px;
+}
+.form label > span{
+  display: inline-block;
+  float: left;
+  width: 150px;
+}
+.form input[type=text],
+.form input[type=password],
+.form input[type=date],
+.form input[type=email] 
+{
+  background: transparent;
+  border: none;
+  border-bottom: 1px dashed #83A4C5;
+  width: 275px;
+  outline: none;
+  padding: 0px 0px 0px 0px;
+  font-style: italic;
+}
+
+.form input[type=text]:focus,
+.form input[type=password]:focus,
+.form input[type=date]:focus,
+.form input[type=email]:focus
+{
+  border-bottom: 1px dashed #D9FFA9;
+}
+
+.form input[type=submit],
+.form input[type=button]{
+  background: var(--clr3);
+  border: none;
+  padding: 8px 10px 8px 10px;
+  border-radius: 5px;
+  color: var(--clr4);
+}
+.form input[type=submit]:hover,
+.form input[type=button]:hover{
+background: var(--clr5);
+}
