--- a/style/style.css
+++ b/style/style.css
@@ -122,7 +122,8 @@ header h1 {
   background-image: url("../images/list_horse_shoe.png");
 }
 
-#breadcrumb ul li:before {
+
+#breadcrumb li:before {
   content: "";
   position: absolute;
   top: -2px;
@@ -130,6 +131,12 @@ header h1 {
   display: inline-block;
   height: 25px;
   width: 25px;
+  /* TODO: aggiungi immagine */
+  /* background-size: contain;
+  background-image: url(""); */
+}
+
+#breadcrumb li:last-child:before {
   background-size: contain;
   background-image: url("../images/arrow.png");
 }
@@ -282,6 +289,7 @@ footer .logo{
 
   color: var(--clrGrn);
 }
+
 .card .headline {
   display: block;
   margin: 0 auto;
@@ -444,3 +452,67 @@ ol a:hover:after {
   border-left-color: var(--clrOrg);
 }
     
+.form{
+  text-align: center;
+  margin: 0 0 0 35%;
+  width: 450px;
+  font-size: 16px;
+  background: var(--clrBrw);
+  padding: 30px 30px 15px 30px;
+  border: 5px solid var(--clrOrg);
+}
+
+.form input[type=submit],
+.form input[type=button],
+.form input[type=text],
+.form input[type=password],
+.form input[type=email],
+.form input[type=date],
+.form label
+{
+  font-size: 16px;
+  color: var(--clrOrg);
+
+}
+.form label {
+  display:block;
+  margin-bottom: 10px;
+}
+.form label > span{
+  float: left;
+  width: 150px;
+}
+.form input[type=text],
+.form input[type=password],
+.form input[type=date],
+.form input[type=email] 
+{
+  background: transparent;
+  border: none;
+  border-bottom: 1px dashed #83A4C5;
+  width: 275px;
+  outline: none;
+  padding: 0px 0px 0px 0px;
+  font-style: italic;
+}
+
+.form input[type=text]:focus,
+.form input[type=password]:focus,
+.form input[type=date]:focus,
+.form input[type=email]:focus
+{
+  border-bottom: 1px dashed #D9FFA9;
+}
+
+.form input[type=submit],
+.form input[type=button]{
+  background: var(--clrGrn);
+  border: none;
+  padding: 8px 10px 8px 10px;
+  border-radius: 5px;
+  color: var(--clrOrg);
+}
+.form input[type=submit]:hover,
+.form input[type=button]:hover{
+background: var(--clrDrkGrn);
+}
