--- a/style/style.css
+++ b/style/style.css
@@ -70,10 +70,9 @@ header h1 {
 }
 
 .navbar {
-	/*width: 15%;*/
-	/*float: left;*/
-
-	/*background-color: grey;*/
+	display: grid;            
+	grid-template-columns: 1fr;            
+	grid-gap: 20px;
 
 	text-align: left;
 
@@ -92,11 +91,22 @@ header h1 {
 }
 
 #breadcrumb {
-	font-size: 1em;
+	font-size: 1.3em;
+	grid-column: 1;
+	grid-row: 1/2;
 }
 
 #menu {
-	font-size: 1.3em;
+	text-decoration: none;
+
+  	font-size: 1.3em;
+  	font-weight: lighter;
+  	letter-spacing: 1px;
+  	transition: .25s ease-in-out;
+
+
+	grid-column: 1;
+	grid-auto-rows: minmax(min-content, max-content);
 }
 
 .navbar ul {
@@ -126,7 +136,7 @@ header h1 {
 #breadcrumb li:before {
   content: "";
   position: absolute;
-  top: -2px;
+  top: 2px;
   left: -28px;
   display: inline-block;
   height: 25px;
@@ -144,13 +154,7 @@ header h1 {
 .navbar a {
   width: 100%;
   height: 100%;
-  color: white;
   text-decoration: none;
-
-  font-size: 1.15em;
-  font-weight: lighter;
-  letter-spacing: 1px;
-  transition: .25s ease-in-out;
 }
 
 a:visited {
@@ -385,12 +389,24 @@ table th {
 
 
 
-#dataGara {
+#h1data {
 	text-align: center;
 }
 
-#dataGara span {
+#h1data span {
 	color: var(--clrOrg);
+}
+
+.centerLink {
+	/*background-color: var(--clrBrw);
+*/	text-align: center;
+	font-size: 1.5em;
+}
+.centerLink a {
+	background-color: var(--clrBrw);
+	padding-right: 5px;
+	padding-left: 5px;
+	text-decoration: none;
 }
 
 .flex-pc {
@@ -515,4 +531,13 @@ ol a:hover:after {
 .form input[type=submit]:hover,
 .form input[type=button]:hover{
 background: var(--clrDrkGrn);
+}
+
+
+.red {
+	color: var(--clrSlm);
+}
+
+.green {
+	color: var(--clrGrn);
 }
