--- a/style/style.css
+++ b/style/style.css
@@ -412,7 +412,7 @@ table th {
 .flex-pc {
 	display: flex;
 	flex-wrap: wrap;
-  	justify-content: center;
+  justify-content: center;
 }
             
 ol {
@@ -540,4 +540,74 @@ background: var(--clrDrkGrn);
 
 .green {
 	color: var(--clrGrn);
+}
+
+.imgContent {
+	width: 40%;
+
+	height: auto;
+
+	align-self: center;
+  border-style: ridge;
+  border-color: var(--clrBrw);
+
+}
+
+.right-element {
+	float: right;
+}
+.left-element {
+	float: left;
+}
+.center-element {
+	float: center;
+}
+
+
+
+main dl:after {content:"";display:table;clear:both;}
+main dd {
+    padding:.5em 0;
+}
+main dl {
+    width:100%;
+}
+main dt, dd {
+    display: inline-block;
+    width:30%;
+}
+main dt {
+    text-align:right;
+    font-weight:bold;
+    clear:left;
+    float:left;
+}
+main dd {
+    width:70%;
+    padding-left:1em;
+    clear:right;
+}
+main dd + dd {
+    float:right;
+    clear:both;
+}
+main dt:first-child {
+    padding-top:.5em;
+}
+main dd + dt {
+    clear:both;
+    padding-top:.5em;
+}
+main dt + dt + dd {
+    margin-top: -2em;
+}
+main dt + dt + dd + dt {
+    margin-top: 2em;
+}
+
+.flex-home {
+  display: flex;
+  flex-wrap: wrap;
+
+  justify-content: center;
 }
