--- a/style/small.css
+++ b/style/small.css
@@ -45,7 +45,7 @@ header {
 	grid-row: 1;*/
 
 	width: 100%;
-	height: 70px;
+	height: auto;
 
 	/*top: 0;*/
 
@@ -53,11 +53,11 @@ header {
 
 
 	background-position: center;
-	background-image: url("../images/top_banner.png");
+	background-image: url("../images/short_banner.png");
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 
-	margin-bottom: 15px;
+	/*margin-bottom: 15px;*/
 }
 
 header h1 {
@@ -146,7 +146,7 @@ header h1 {
 	align-self: center;
 
 	width: 100%;
-	height: 70px;
+	height: auto;
 
 	display: table;
 
@@ -351,7 +351,7 @@ footer .logo{
 }
 .cards img {
   width: 100%;
-  height: auto;
+  height: 300px;
   position: center;
   border-radius: var(--border-radius);
 }
