--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,7 @@
 body {
 	margin: auto;
 
+  overflow-x: hidden;
 	display: flex;
 	flex-direction: column;
 	background-color: var(--clrDrkGrn);
@@ -204,16 +205,26 @@ footer {
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;            
 	grid-gap: 20px;
 
+
+  border-radius: 0.5em;
 	background-color: var(--clrBlu);
 	grid-column: 1/7;
 	grid-row: 10; 
 }
 
+#copyright {
+  grid-column: 3/7;
+  grid-row: 2;
+}
+#copyright p {
+  background: white;
+  border-radius: 0.5em;
+  margin: 0;
+}
 footer ul {
-	grid-column: 3/7;
-	grid-row: 2; 
-
-	transform: translate(-50px, -50%);
+	/*grid-column: 3/7;*/
+  padding: 0;
+	/*transform: translate(-50px, -50%);*/
 }
 
 footer ul li{
@@ -245,14 +256,14 @@ footer .logo{
 
 #img-valid-code {
 	grid-column: 1;
-	grid-row: 3; 
 	margin: 5px;
+  grid-row-end: 5;
 }
 
 #img-valid-css {
 	grid-column: 7;
-	grid-row: 3; 
 	margin: 5px;
+  grid-row-end: 5;
 }
 
 
