--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,7 @@
   --clrOrg: #cc9900;
   --clrDrkGrn: #2d862d;
   --clrSlm: #ff6666;
+  --clrBrx: #800000;
 }
 
 body {
@@ -83,7 +84,7 @@ header h1 {
 	min-width: 280px;
 
 	background-image: url("../images/wood_pattern.png");
-	background-color: var(--clrSlm);
+	background-color: var(--clrBrx);
 
 	color: var(--clrWht);
 
@@ -156,14 +157,15 @@ header h1 {
   width: 100%;
   height: 100%;
   text-decoration: none;
+  transition: .25s ease-in-out;
 }
 
 a:visited {
-  color: var(--clrGrn);
+  color: var(--clrBlu);
 }
 
 a:hover {
-  color: var(--clrBlu);
+  color: var(--clrDrkGrn);
 }
 
 .tracks {
