--- a/style/small.css
+++ b/style/small.css
@@ -259,7 +259,8 @@ footer {
 
 #copyright {
   grid-column: 3/7;
-  grid-row: 2;
+  grid-auto-rows: minmax(min-content, max-content);
+  margin-top: 10px;
 }
 #copyright p {
   background: white;
