--- a/style/small.css
+++ b/style/small.css
@@ -26,7 +26,7 @@ body {
 .topPic {
 	align-self: center;
 	width: 75%;
-	height: 400px;
+	height: 200px;
 
 	margin: 0 0 20px;
 
@@ -74,7 +74,7 @@ header h1 {
 
 #breadcrumb {
 	background-image: url("../images/wood_pattern.png");
-	background-color: var(--clrBrx);
+	background-color: var(--clrSlm);
 
 	align-self: center;
 
@@ -86,22 +86,20 @@ header h1 {
 
 	text-align: center;
 	margin-bottom: 15px;
-}
 
-#breadcrumb {
-	text-align: center;
+
 	margin-top: 0;
 	padding: 0;
 }
 
 #breadcrumb li {
 	text-align: center;
-	font-size: 2em;
+	font-size: 1em;
 	margin: 0;
   	display: inline-block;
   	list-style: none;
   	margin: 0;
-  	padding: .2em .7em;
+  	padding: 0 1em .7em 0 ;
 }
 
 
@@ -111,11 +109,11 @@ header h1 {
   
   display: inline-block;
   position: relative;
-  top: 8px;
-  left: -27px;
+  top: 10px;
+  left: -10px;
 
-  height: 35px;
-  width: 35px;
+  height: 30px;
+  width: 30px;
   background-size: contain;
   background-image: url("../images/arrow.png");
 }
@@ -150,7 +148,13 @@ header h1 {
 	width: 100%;
 	height: auto;
 
-	display: table;
+	display: grid;            
+  grid-template-columns: 1fr;            
+  grid-gap: 2px;
+
+  padding-top: 20px;
+
+  text-align: center;
 
 	background-position: center;
 	background-image: url("../images/bottom_banner.png");
@@ -174,12 +178,12 @@ header h1 {
 	position: relative;
 	/*top: -17px;*/
 	
-	display:table-cell;
-	vertical-align: bottom;
+/*	display:table-cell;
+	vertical-align: bottom;*/
 
 	color: var(--clrWht);
 
-	font-size: 1.3em;
+	font-size: 1.7em;
 
   	list-style: none;
   	margin: 0;
@@ -188,9 +192,9 @@ header h1 {
 }
 
 #menu ul li {
-  	display: inline-block;
-  	margin: 0;
-  	padding: .2em .7em;
+  	position: relative;
+/*  	margin: 0;
+  	padding: .2em .7em;*/
 }
 
 #menu a {
@@ -221,6 +225,14 @@ a:hover {
   color: var(--clrDrkGrn);
 }
 
+a:focus {
+  border-style: ridge;
+  border-color: var(--clrDrkGrn);
+}
+
+.cards a:focus {
+  border: unset;
+}
 
 main {
 	/*width: 84%;*/
@@ -247,7 +259,7 @@ footer {
   bottom: 0;*/
 
   display: grid;            
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;            
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;            
   grid-gap: 20px;
 
 
@@ -258,14 +270,14 @@ footer {
 }
 
 #copyright {
-  grid-column: 3/7;
+  grid-column: 2/7;
   grid-auto-rows: minmax(min-content, max-content);
   margin-top: 10px;
 }
 #copyright p {
   background: white;
   border-radius: 0.5em;
-  margin: 0;
+  margin-top: 5px;
 }
 footer ul {
   /*grid-column: 3/7;*/
@@ -285,12 +297,15 @@ footer ul li{
 }
 
 footer .logo{
-  grid-column: 2;
-  grid-row: 2; 
+  grid-column: 4;
+  grid-row: 1; 
 
-    width: 50px;
-    height: 50px;
-    border-radius: 0.5em;
+  margin-top: 5px;
+  margin-left: 1em;
+
+  width: 50px;
+  height: 50px;
+  border-radius: 0.5em;
 }
 
 .logo{ 
@@ -301,15 +316,15 @@ footer .logo{
 }
 
 #img-valid-code {
-  grid-column: 1;
-  margin: 5px;
-  grid-row-end: 5;
+  grid-column: 3;
+  /*margin: 5px;*/
+  grid-row: 2;
 }
 
 #img-valid-css {
-  grid-column: 7;
-  margin: 5px;
-  grid-row-end: 5;
+  grid-column: 5;
+  /*margin: 5px;*/
+  grid-row: 2;
 }
 
 
@@ -364,7 +379,7 @@ footer .logo{
   font-size: 1.2em;
 }
 .card a {
-  color: #ddd;
+  text-decoration: none;
 }
 
 .cards .content {
