--- a/style/style.css
+++ b/style/style.css
@@ -84,7 +84,7 @@ header h1 {
 	min-width: 280px;
 
 	background-image: url("../images/wood_pattern.png");
-	background-color: var(--clrBrx);
+	background-color: var(--clrSlm);
 
 	color: var(--clrWht);
 
@@ -168,6 +168,14 @@ a:hover {
   color: var(--clrDrkGrn);
 }
 
+a:focus {
+  border-style: ridge;
+  border-color: var(--clrDrkGrn);
+}
+.cards a:focus {
+  border: unset;
+}
+
 .tracks {
   grid-column: 1;
   grid-auto-rows: 33.3%;
@@ -222,7 +230,7 @@ footer {
 #copyright p {
   background: white;
   border-radius: 0.5em;
-  margin: 0;
+  margin-top: 10px;  
 }
 footer ul {
 	/*grid-column: 3/7;*/
@@ -346,7 +354,7 @@ footer .logo{
   font-size: 1.2em;
 }
 .card a {
-  color: #ddd;
+  text-decoration: none;
 }
 
 .cards .content {
