--- a/style/small.css
+++ b/style/small.css
@@ -362,7 +362,7 @@ footer .logo{
   max-width: 260px;
   height: 30px;
   /*background: var(--clrGrn);*/
-  border-radius: var(--text-radius);
+  border-radius: var(--border-radius);
 }
 .card .text {
   display: block;
@@ -370,7 +370,7 @@ footer .logo{
   max-width: 500px;
   height: 20px;
   /*background: var(--clrGrn);*/
-  border-radius: var(--text-radius);
+  border-radius: var(--border-radius);
 }
 .card .button {
   display: block;
@@ -378,7 +378,7 @@ footer .logo{
   max-width: 120px;
   height: 35px;
   background: var(--clrOrg);
-  border-radius: var(--text-radius);
+  border-radius: var(--border-radius);
   text-align: center;
   font-size: 1.2em;
 }
@@ -387,7 +387,8 @@ footer .logo{
 }
 
 .cards .content {
-  padding: 40px;
+  padding: 0;
+  padding-bottom: 5px;
   vertical-align: bottom;
 }
 .cards img {
@@ -567,68 +568,68 @@ ol a:hover:after {
   border-left-color: var(--clrOrg);
 }
 
-.form{
+form{
   text-align: center;
   margin: 0 0 0 0;
   width: 450px;
   font-size: 16px;
-  background: var(--clrWht);
+  background: var(--clrBrw);
   padding: 30px 30px 15px 30px;
   border: 5px solid var(--clrOrg);
 }
 
-.form input[type=submit],
-.form input[type=button],
-.form input[type=text],
-.form input[type=password],
-.form input[type=email],
-.form input[type=date],
-.form label
+form input[type=submit],
+form input[type=button],
+form input[type=text],
+form input[type=password],
+form input[type=email],
+form input[type=date],
+form label
 {
   font-size: 16px;
   color: var(--clrOrg);
 
 }
-.form label {
+form label {
   display:block;
   margin-bottom: 10px;
 }
-.form label > span{
+form label > span{
   float: left;
   width: 150px;
 }
-.form input[type=text],
-.form input[type=password],
-.form input[type=date],
-.form input[type=email] 
+form input[type=text],
+form input[type=password],
+form input[type=date],
+form input[type=email] 
 {
   background: transparent;
   border: none;
-  border-bottom: 1px dashed #83A4C5;
+  border-bottom: 1px dashed var(--clrOrg);
   width: 275px;
   outline: none;
   padding: 0px 0px 0px 0px;
   font-style: italic;
 }
 
-.form input[type=text]:focus,
-.form input[type=password]:focus,
-.form input[type=date]:focus,
-.form input[type=email]:focus
+form input[type=text]:focus,
+form input[type=password]:focus,
+form input[type=date]:focus,
+form input[type=email]:focus
 {
-  border-bottom: 1px dashed #D9FFA9;
+  border: 4px solid var(--clrOrg);
 }
 
-.form input[type=submit],
-.form input[type=button]{
+form input[type=submit],
+form input[type=button]{
   background: var(--clrGrn);
   border: none;
   padding: 8px 10px 8px 10px;
   border-radius: 5px;
   color: var(--clrOrg);
 }
-.form input[type=submit]:hover,
-.form input[type=button]:hover{
+form input[type=submit]:hover,
+form input[type=button]:hover{
 background: var(--clrDrkGrn);
 }
     
@@ -652,13 +653,13 @@ background: var(--clrDrkGrn);
 }
 
 .right-element {
-  float: right;
+  float: right !important;
 }
 .left-element {
-  float: left;
+  float: left !important;
 }
 .center-element {
-  float: center;
+  float: center !important;
 }
 
 
