--- a/style/small.css
+++ b/style/small.css
@@ -31,14 +31,7 @@ body {
 }
 
 .topPic {
-	align-self: center;
-	width: 75%;
-	height: 200px;
-
-	margin: 0 0 20px;
-
-	border-style: ridge;
-	border-color: var(--clrBrw);
+  display: none;
 }
 
 .page{
