--- a/style/small.css
+++ b/style/small.css
@@ -734,3 +734,17 @@ main dt + dt + dd + dt {
   background-size: contain;
   background-image: url("../images/bitsquit.png");
 }
+
+.visually-hidden {
+  position: absolute;
+	height: 1px;
+	width: 1px;
+	overflow: hidden;
+	clip: rect(1px, 1px, 1px, 1px);
+}
+
+.go-back-button {
+  position: static;
+  height: auto;
+  width: auto;
+}
