--- a/style/style.css
+++ b/style/style.css
@@ -675,3 +675,11 @@ main dt + dt + dd + dt {
   background-size: contain;
   background-image: url("../images/bitsquit.png");
 }
+
+.visually-hidden {
+  position: absolute;
+	height: 1px;
+	width: 1px;
+	overflow: hidden;
+	clip: rect(1px, 1px, 1px, 1px);
+}
