--- a/style/small.css
+++ b/style/small.css
@@ -156,10 +156,10 @@ header h1 {
 
   text-align: center;
 
-	background-position: center;
+/*	background-position: center;
 	background-image: url("../images/bottom_banner.png");
 	background-repeat: no-repeat;
-	background-size: 100% 100%;
+	background-size: 100% 100%;*/
 }
 
 /*.navbar ul li:before {
@@ -175,33 +175,39 @@ header h1 {
 }*/
 
 #menu ul {
-	position: relative;
-	/*top: -17px;*/
-	
-/*	display:table-cell;
-	vertical-align: bottom;*/
+  position: relative;
+  width: 100%;
 
-	color: var(--clrWht);
+  /*top: -17px;*/
+  
+/*  display:table-cell;
+  vertical-align: bottom;*/
 
-	font-size: 1.7em;
+  color: var(--clrWht);
 
-  	list-style: none;
-  	margin: 0;
-  	padding: .2em 2em;
+  font-size: 1.7em;
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
 
 }
 
 #menu ul li {
-  	position: relative;
-/*  	margin: 0;
-  	padding: .2em .7em;*/
+    position: relative;
+/*    margin: 0;
+    padding: .2em .7em;*/
+    background-position: center;
+  background-image: url("../images/bottom_banner.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 #menu a {
   	width: 100%;
   	height: 100%;
 
-  	color: var(--clrWht);
+  	color: var(--clrGrn);
   	text-decoration: none;
 
   	font-weight: lighter;
@@ -217,6 +223,9 @@ header h1 {
   color: var(--clrDrkGrn);
 }
 
+a {
+  color: var(--clrGrn);
+}
 a:visited {
   color: var(--clrBlu);
 }
@@ -243,6 +252,10 @@ main {
 
 	align-self: center;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
 	color: var(--clrWht);
 
 	border-style: ridge;
@@ -267,6 +280,8 @@ footer {
   background-color: var(--clrBlu);
   grid-column: 1/7;
   grid-row: 10; 
+
+  margin-top: 10px;
 }
 
 #copyright {
@@ -574,9 +589,13 @@ ol a:hover:after {
 }
 
 form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
   text-align: center;
   margin: 0 0 0 0;
-  width: 450px;
+  width: 19em;
   font-size: 16px;
   background: var(--clrBrw);
   padding: 30px 30px 15px 30px;
@@ -589,10 +608,17 @@ form input[type=text],
 form input[type=password],
 form input[type=email],
 form input[type=date],
+form input[type=time],
+form input[type=checkbox],
+form input[type=number],
+form input[type=radio],
 form label
 {
-  font-size: 16px;
+  font-size: 1.7em;
   color: var(--clrOrg);
+
+  align-self: center;
+  text-align: center;
 
 }
 form label {
@@ -600,13 +626,16 @@ form label {
   margin-bottom: 10px;
 }
 form label > span{
-  float: left;
+  float: center;
   width: 150px;
 }
 form input[type=text],
 form input[type=password],
 form input[type=date],
-form input[type=email] 
+form input[type=email],
+form input[type=time],
+form input[type=number],
+form input[type=radio]
 {
   background: transparent;
   border: none;
@@ -620,24 +649,34 @@ form input[type=email]
 form input[type=text]:focus,
 form input[type=password]:focus,
 form input[type=date]:focus,
-form input[type=email]:focus
+form input[type=email]:focus,
+form input[type=time]:focus,
+form input[type=number]:focus,
+form input[type=radio]:focus
 {
   border: 4px solid var(--clrOrg);
 }
 
 form input[type=submit],
 form input[type=button]{
-  background: var(--clrGrn);
+  background: var(--button-color);
   border: none;
   padding: 8px 10px 8px 10px;
   border-radius: 5px;
   color: var(--clrOrg);
+
+  margin-top: 10px;
 }
 form input[type=submit]:hover,
 form input[type=button]:hover{
-background: var(--clrDrkGrn);
+background: var(--clrSlm);
 }
-    
+
+form input[type=checkbox],
+form input[type=radio] {
+  margin-top: 20px;
+}
+
 .lose {
 	color: var(--clrSlm);
 }
@@ -736,7 +775,6 @@ main dt + dt + dd + dt {
 }
 
 .visually-hidden {
-  position: absolute;
 	height: 1px;
 	width: 1px;
 	overflow: hidden;
@@ -744,7 +782,17 @@ main dt + dt + dd + dt {
 }
 
 .go-back-button {
-  position: static;
   height: auto;
   width: auto;
+
+  font-size: 2em;
+  text-decoration: none;
+
+  align-self: center;
+  text-align: center;
+  background-color: var(--clrSlm);
+  border-radius: var(--border-radius);
+
+  margin: 5px 0 5px 0;
+
 }
