--- a/style/style.css
+++ b/style/style.css
@@ -162,6 +162,9 @@ header h1 {
   transition: .25s ease-in-out;
 }
 
+a {
+  color: var(--clrGrn);
+}
 a:visited {
   color: var(--clrBlu);
 }
@@ -198,6 +201,8 @@ main {
 	grid-column: 2/7;
 	grid-row: 1/10; 
 
+
+
 	color: var(--clrWht);
 
 	border-style: ridge;
@@ -222,6 +227,7 @@ footer {
 	background-color: var(--clrBlu);
 	grid-column: 1/7;
 	grid-row: 10; 
+  margin-top: 10px;
 }
 
 #copyright {
@@ -514,6 +520,10 @@ ol a:hover:after {
 }
     
 form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
   text-align: center;
   margin: 0 0 0 35%;
   width: 450px;
@@ -529,10 +539,14 @@ form input[type=text],
 form input[type=password],
 form input[type=email],
 form input[type=date],
+form input[type=time],
 form label
 {
-  font-size: 16px;
+  font-size: 1.7em;
   color: var(--clrOrg);
+
+  align-self: center;
+  text-align: center;
 
 }
 form label {
@@ -540,13 +554,14 @@ form label {
   margin-bottom: 10px;
 }
 form label > span{
-  float: left;
+  float: center;
   width: 150px;
 }
 form input[type=text],
 form input[type=password],
 form input[type=date],
-form input[type=email] 
+form input[type=email],
+form input[type=time]
 {
   background: transparent;
   border: none;
@@ -560,22 +575,33 @@ form input[type=email]
 form input[type=text]:focus,
 form input[type=password]:focus,
 form input[type=date]:focus,
-form input[type=email]:focus
+form input[type=email]:focus,
+form input[type=time]:focus
 {
   border: 4px solid var(--clrOrg);
 }
 
 form input[type=submit],
 form input[type=button]{
-  background: var(--clrGrn);
+  background: var(--button-color);
   border: none;
   padding: 8px 10px 8px 10px;
   border-radius: 5px;
   color: var(--clrOrg);
+
+  margin-top: 10px;
 }
 form input[type=submit]:hover,
 form input[type=button]:hover{
-background: var(--clrDrkGrn);
+background: var(--clrSlm);
+}
+
+form input[type=checkbox] {
+  margin: auto;
+}
+
+#v-distance {
+  margin-top: 30px;
 }
 
 
