--- a/style/style.css
+++ b/style/style.css
@@ -201,7 +201,8 @@ main {
 	grid-column: 2/7;
 	grid-row: 1/10; 
 
-
+  display: flex;
+  flex-direction: column;
 
 	color: var(--clrWht);
 
@@ -525,7 +526,7 @@ form{
   justify-content: center;
 
   text-align: center;
-  margin: 0 0 0 35%;
+  align-self: center;
   width: 450px;
   font-size: 16px;
   background: var(--clrBrw);
