--- a/style/style.css
+++ b/style/style.css
@@ -21,6 +21,7 @@
   --clrSlm: #820D0D;
   --clrBrx: #800000;
   --clrBlk: #272727;
+  --clrGry: #808080;
 }
 
 body {
@@ -572,8 +573,7 @@ form input[type=password],
 form input[type=date],
 form input[type=email],
 form input[type=time],
-form input[type=number],
-form input[type=radio]
+form input[type=number]
 {
   background: transparent;
   border: none;
@@ -610,10 +610,19 @@ form input[type=button]:hover{
 background: var(--clrSlm);
 }
 
-form input[type=checkbox],
+form input[type=submit]:disabled,
+form input[type=button]:disabled{
+background: var(--clrGry);
+}
+form input[type=submit]:disabled:hover,
+form input[type=button]:disabled:hover{
+background: var(--clrGry);
+}
+
+/*form input[type=checkbox],
 form input[type=radio] {
   margin-top: 20px;
-}
+}*/
 
 #v-distance {
   margin-top: 30px;
@@ -723,4 +732,29 @@ main dt + dt + dd + dt {
 	width: 1px;
 	overflow: hidden;
 	clip: rect(1px, 1px, 1px, 1px);
+}
+
+.flex-div {
+  display: grid;            
+  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+
+  justify-items: center;
+
+  margin-top: 20px;
+  /*display: inline-flex;*/
+}
+
+.flex-div label{
+  grid-column: 2;
+  grid-row: 1;
+
+  float: center;
+}
+
+.flex-div input{
+  grid-column: 3;
+  grid-row: 1;
+
+
+  width: 0.2em ;
 }
