fix background per leggibilita`

--- a/style/small.css
+++ b/style/small.css
@@ -838,3 +838,7 @@ main dt + dt + dd + dt {
 
   width: 0.2em ;
 }
+.brw-back {
+  background: var(--clrBrw);
+  border-radius: var(--border-radius);
+}
