--- a/style/small.css
+++ b/style/small.css
@@ -50,13 +50,8 @@ header {
 	align-self: center;
 	text-align: center;
 
-	/*grid-column: 1/7;
-	grid-row: 1;*/
-
 	width: 100%;
 	height: auto;
-
-	/*top: 0;*/
 
 	display: table;
 
@@ -65,13 +60,10 @@ header {
 	background-image: url("../images/short_banner.png");
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
-
-	/*margin-bottom: 15px;*/
 }
 
 header h1 {
 	position: relative;
-	/*top: -17px;*/
 	
 	display:table-cell;
 	vertical-align: text-top;
@@ -129,25 +121,7 @@ header h1 {
   background: none;
 }
 
-/*
-#breadcrumb ul li:before {
-  content: "";
-  position: absolute;
-  top: 10px;
-  left: -20px;
-  display: inline-block;
-  height: 15px;
-  width: 15px;
-  background-size: contain;
-  background-image: url("../images/list_horse_shoe.png");
-}
-*/
 #menu {
-	/*width: 15%;*/
-	/*float: left;*/
-
-	/*background-color: grey;*/
-
 	text-align: center;
 
 	align-self: center;
@@ -162,33 +136,11 @@ header h1 {
   padding-top: 20px;
 
   text-align: center;
-
-/*	background-position: center;
-	background-image: url("../images/bottom_banner.png");
-	background-repeat: no-repeat;
-	background-size: 100% 100%;*/
 }
-
-/*.navbar ul li:before {
-  content: "";
-  position: absolute;
-  top: 2px;
-  left: -20px;
-  display: inline-block;
-  height: 15px;
-  width: 15px;
-  background-size: contain;
-  background-image: url("../images/list_horse_shoe.png");
-}*/
 
 #menu ul {
   position: relative;
   width: 100%;
-
-  /*top: -17px;*/
-  
-/*  display:table-cell;
-  vertical-align: bottom;*/
 
   color: var(--clrWht);
 
@@ -202,8 +154,7 @@ header h1 {
 
 #menu ul li {
     position: relative;
-/*    margin: 0;
-    padding: .2em .7em;*/
+
     background-position: center;
   background-image: url("../images/bottom_banner.png");
   background-repeat: no-repeat;
@@ -251,9 +202,6 @@ a:focus {
 }
 
 main {
-	/*width: 84%;*/
-	/*float: right;*/
-
 	background-image: url("../images/wood_pattern.png");
 	background-color: var(--clrBrw);
 
@@ -274,10 +222,6 @@ main dl {
 }
 
 footer {
-  /*width: 100%;*/
-  /*position: absolute; 
-  bottom: 0;*/
-
   display: grid;            
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;            
   grid-gap: 20px;
@@ -302,9 +246,7 @@ footer {
   margin-top: 5px;
 }
 footer ul {
-  /*grid-column: 3/7;*/
   padding: 0;
-  /*transform: translate(-50px, -50%);*/
 }
 
 footer ul li{
@@ -339,13 +281,11 @@ footer .logo{
 
 #img-valid-code {
   grid-column: 3;
-  /*margin: 5px;*/
   grid-row: 2;
 }
 
 #img-valid-css {
   grid-column: 5;
-  /*margin: 5px;*/
   grid-row: 2;
 }
 
@@ -357,8 +297,6 @@ footer .logo{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-/*  align-self: center;
-  margin: 2px 0px 2px 0px;*/
   text-align: center;
 }
 .card {
@@ -379,7 +317,6 @@ footer .logo{
   list-style: none;
   max-width: 260px;
   height: 30px;
-  /*background: var(--clrGrn);*/
 
   color: var(--clrOrg);
   border-radius: var(--border-radius);
@@ -389,7 +326,6 @@ footer .logo{
   margin: 10px auto;
   max-width: 500px;
   height: 20px;
-  /*background: var(--clrGrn);*/
   border-radius: var(--border-radius);
 }
 .card .button {
@@ -522,8 +458,7 @@ table {
 }
 
 .centerLink {
-	/*background-color: var(--clrBrw);
-*/	text-align: center;
+	text-align: center;
 	font-size: 1.5em;
 }
 .centerLink a {
@@ -684,12 +619,6 @@ form input[type=button]:disabled:hover{
   color: var(--clrBlk);
 }
 
-
-/*form input[type=checkbox],
-form input[type=radio] {
-  margin-top: 20px;
-}*/
-
 .lose {
 	color: var(--clrSlm);
 }
@@ -813,7 +742,6 @@ main dt + dt + dd + dt {
   justify-items: center;
 
   margin-top: 20px;
-  /*display: inline-flex;*/
 }
 
 .flex-div label{
