--- a/style/style.css
+++ b/style/style.css
@@ -53,13 +53,8 @@ body {
 header {
 	text-align: center;
 
-	/*grid-column: 1/7;
-	grid-row: 1;*/
-
 	width: 100%;
 	height: 70px;
-
-	/*top: 0;*/
 
 	display:table;
 
@@ -73,7 +68,6 @@ header {
 
 header h1 {
 	position: relative;
-	/*top: -17px;*/
 	
 	display:table-cell;
 	vertical-align: text-top;
@@ -198,9 +192,6 @@ a:focus {
 }
 
 main {
-	/*width: 84%;*/
-	/*float: right;*/
-
 	background-image: url("../images/wood_pattern.png");
 	background-color: var(--clrBrw);
 
@@ -221,10 +212,6 @@ main dl {
 }
 
 footer {
-	/*width: 100%;*/
-	/*position: absolute; 
-	bottom: 0;*/
-
 	display: grid;            
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;            
 	grid-gap: 20px;
@@ -248,9 +235,7 @@ footer {
   margin-top: 10px;  
 }
 footer ul {
-	/*grid-column: 3/7;*/
   padding: 0;
-	/*transform: translate(-50px, -50%);*/
 }
 
 footer ul li{
@@ -293,31 +278,6 @@ footer .logo{
   grid-row-end: 3;
 }
 
-
-
-
-/*.wrap{
-  max-width: 100%;
-  min-width: 100%;
-  height: auto;
-  margin: 0;
-  position: relative;
-  border-radius: var(--border-radius);
-  z-index: 0;
-  height: 100%;
-  padding: 5px 0 5px 0;
-  background: var(--clr3);
-}
-
-.wrapper{
-  width: 100%;
-  height: auto;
-  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.8);
-  border-radius: var(--border-radius);
-  z-index: 0;
-  background: var(--clr5);
-}
-*/
 .cards {
   width: 100%;
   padding: 0px;
@@ -325,8 +285,6 @@ footer .logo{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-/*  align-self: center;
-  margin: 2px 0px 2px 0px;*/
   text-align: center;
 }
 .card {
@@ -349,7 +307,6 @@ footer .logo{
   list-style: none;
   max-width: 260px;
   height: 30px;
-  /*background: var(--clrGrn);*/
 
   color: var(--clrOrg);
   border-radius: var(--border-radius);
@@ -359,12 +316,9 @@ footer .logo{
   margin: 10px auto;
   max-width: 500px;
   height: 20px;
-  /*background: var(--clrGrn);*/
   border-radius: var(--border-radius);
 }
-/*.text span {
-  display: inline;
-}*/
+
 .card .button {
   display: block;
   margin: 20px auto 0 auto;
@@ -458,8 +412,7 @@ table th {
 }
 
 .centerLink {
-	/*background-color: var(--clrBrw);
-*/	text-align: center;
+	text-align: center;
 	font-size: 1.5em;
 }
 .centerLink a {
@@ -621,11 +574,6 @@ form input[type=button]:disabled:hover{
   color: var(--clrBlk);
 }
 
-/*form input[type=checkbox],
-form input[type=radio] {
-  margin-top: 20px;
-}*/
-
 #v-distance {
   margin-top: 30px;
 }
@@ -740,7 +688,6 @@ main dt + dt + dd + dt {
   justify-items: center;
 
   margin-top: 20px;
-  /*display: inline-flex;*/
 }
 
 .flex-div label{
